--- a/client/package.json
+++ b/client/package.json
@@ -12,32 +12,21 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "firebase": "^8.4.3",
-    "idb": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.4",
-    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0",
     "sass": "^1.32.11",
     "socket.io-client": "^4.0.1",
     "sweetalert": "^2.1.2",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
-    "workbox-background-sync": "^5.1.3",
-    "workbox-broadcast-update": "^5.1.3",
-    "workbox-cacheable-response": "^5.1.3",
     "workbox-core": "^5.1.3",
     "workbox-expiration": "^5.1.3",
-    "workbox-google-analytics": "^5.1.3",
-    "workbox-navigation-preload": "^5.1.3",
     "workbox-precaching": "^5.1.3",
-    "workbox-range-requests": "^5.1.3",
     "workbox-routing": "^5.1.3",
-    "workbox-strategies": "^5.1.3",
-    "workbox-streams": "^5.1.3"
+    "workbox-strategies": "^5.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
