--- a/package.json
+++ b/package.json
@@ -1,16 +1,57 @@
 {
-  "name": "tasks_app",
-  "version": "1.0.0",
-  "description": "My-App tasks managment",
-  "main": "index.js",
+  "name": "manager",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@react-firebase/database": "^0.3.11",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "firebase": "^8.4.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^3.0.4",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "sass": "^1.32.13",
+    "sweetalert": "^2.1.2",
+    "typescript": "^4.0.3",
+    "web-vitals": "^0.2.4",
+    "workbox-core": "^5.1.3",
+    "workbox-expiration": "^5.1.3",
+    "workbox-precaching": "^5.1.3",
+    "workbox-routing": "^5.1.3",
+    "workbox-strategies": "^5.1.3"
+  },
   "scripts": {
-    "build": "(cd client && npm install && npm run-script build) && (cd server && npm install)",
-    "start": "cd server && npm start"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "author": "Jose Rodrigues (JJNR)",
-  "license": "ISC",
-  "dependencies": {}
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.7"
+  }
 }
